--- a/micro-oauth2/micro-oauth2-auth/src/main/resources/application.yml
+++ b/micro-oauth2/micro-oauth2-auth/src/main/resources/application.yml
@@ -14,8 +14,8 @@ spring:
   redis:
     database: 0
     port: 6379
-    host: localhost
-    password:
+    host: 10.243.1.203
+    password: 123456
 management:
   endpoints:
     web:
