--- a/micro-oauth2/micro-oauth2-gateway/src/main/resources/application.yml
+++ b/micro-oauth2/micro-oauth2-gateway/src/main/resources/application.yml
@@ -35,8 +35,8 @@ spring:
   redis:
     database: 0
     port: 6379
-    host: localhost
-    password:
+    host: 10.243.1.203
+    password: 123456
 secure:
   ignore:
     urls: #配置白名单路径
