--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>oauth2-jwt-server</module>
+        <module>springcloud-zookeeper</module>
     </modules>
 
 
